# llm-eval-bench

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
examples/: basic.yaml  custom_eval_example.yaml  judge_example.yaml  my_custom_evaluator.py
llm_eval/: cli.py  loader.py  reporter.py  runner.py
llm_eval/adapters/: __init__.py  anthropic_adapter.py  base.py  gemini_adapter.py  huggingface_adapter.py  openai_adapter.py
llm_eval/evaluators/: __init__.py  base.py  llm_judge.py  registry.py  rule_based.py  semantic.py
tests/: test_adapters.py  test_evaluators.py  test_loader.py
