[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-eval-bench"
version = "0.1.0"
description = "A local CLI tool for evaluating LLM prompt outputs against test suites"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "openai>=1.0",
    "anthropic>=0.20",
    "google-genai>=0.8",
    "sentence-transformers>=2.2",
    "huggingface_hub>=0.24",
]

[project.scripts]
llm-eval = "llm_eval.cli:cli"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.hatch.build.targets.wheel]
packages = ["llm_eval"]